--- a/client/package.json
+++ b/client/package.json
@@ -4,15 +4,27 @@
   "version": "0.0.0",
   "type": "module",
   "scripts": {
+    "start:dev": "npx nodemon server.js",
     "dev": "vite",
     "build": "vite build",
     "lint": "eslint .",
     "preview": "vite preview"
   },
   "dependencies": {
+    "crypto-browserify": "^3.12.0",
+    "express": "^4.21.1",
+    "freeice": "^2.2.2",
+    "nodemon": "^3.1.7",
+    "peerjs": "^1.5.4",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
-    "socket.io-client": "^4.8.0"
+    "react-router": "^6.26.2",
+    "react-router-dom": "^6.26.2",
+    "rollup-plugin-polyfill-node": "^0.13.0",
+    "simple-peer": "^9.11.1",
+    "socket.io": "^4.8.0",
+    "socket.io-client": "^4.8.0",
+    "uuid": "^10.0.0"
   },
   "devDependencies": {
     "@eslint/js": "^9.11.1",
@@ -24,6 +36,7 @@
     "eslint-plugin-react-hooks": "^5.1.0-rc.0",
     "eslint-plugin-react-refresh": "^0.4.12",
     "globals": "^15.9.0",
-    "vite": "^5.4.8"
+    "vite": "^5.4.8",
+    "vite-plugin-node-polyfills": "^0.22.0"
   }
 }
